bad/add_invalid_types_null_array.example_compiler_output
ERROR
[1mbad/add_invalid_types_null_array.lat:3:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `null` and `string[]`[m
	null + new string[3];
	     [1;32m^[m
